objects/EFPIO__LoggingProviderSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify the logging provider that will be used within the framework.</description>
    <fields>
        <fullName>EFPIO__LoggingLevels__c</fullName>
        <description>The comma delimited list of logging levels. Only System.LoggingLevel enum values are valid for use. This is a cumulative list, so if you only specify ERROR, only logs with ERROR will be stored, however, if you specify INFO, then INFO, WARN, and ERROR logs will be stored. If you specify &quot;WARN, FINE&quot; then only the highest level will be taken into account - FINE in this case, which will consist of FINE, DEBUG, INFO, WARN, and ERROR. Valid values are NONE,ERROR,WARN,INFO,DEBUG,FINE,FINER,FINEST</description>
        <label>Logging Levels to Capture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__LoggingMaxRetryAttempts__c</fullName>
        <description>The maximum amount of times to attempt to retry a DML interaction before erroring.</description>
        <label>Logging Max Retry Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFPIO__LoggingProvider__c</fullName>
        <description>The fully qualified name of the logging provider implementing the EFPIO.ILoggingProvider_v1 interface and extending the LoggingBaseProvider_v1 base class.</description>
        <label>Logging Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EFPIO - Logging Provider Settings</label>
</CustomObject>